--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 1
         versionName "1.0.0"
         ndk {
-            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            abiFilters "armeabi", /*"armeabi-v7a", "arm64-v8a",*/ "x86", "x86_64"
         }
 
     }
